--- a/src/yatzy.css
+++ b/src/yatzy.css
@@ -1,5 +1,6 @@
 body {
     font-family: 'Open Sans', sans-serif;
+    background-color: #f0f0f0;
 }
 
 h1, h2, h3, h4, h5 {
@@ -7,13 +8,77 @@ h1, h2, h3, h4, h5 {
 }
 
 .title {
-
+    display: grid;
+    justify-content: center;
 }
 
 #board {
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+}
+
+/*
+ * dice board
+ */
+#dice-board {
+    display: inline-grid;
+    background-color: white;
+    grid-template-rows: 1fr 4fr 1fr;
+}
+
+/* dice board roll button */
+.btn-roll {
 
 }
 
+/*
+ * overview
+ */
 #overview {
+    display: inline-grid;
+    grid-template-columns: 1fr 1fr;
+}
 
+/* overview spans */
+span {
+    background-color: white;
+    border: 1px solid lightblue;
+    padding-left: 15px;
+}
+
+span:not([disabled="true"]):hover {
+    background-color: lightblue;
+}
+
+/**
+ * Utilties
+ */
+
+.border-top {
+    border-top: 2px solid lightblue;
+}
+
+.border-bottom {
+    border-bottom: 2px solid lightblue;
+}
+
+.bold {
+    font-weight: bold;
+}
+
+.btn {
+    border: 2px solid lightblue;
+    background-color: unset;
+}
+
+.btn:hover {
+    background-color: azure;
+    cursor: pointer;
+}
+
+.pointer {
+    cursor: pointer;
 }
